# globant_challenge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
globantchallenge/: main.py
globantchallenge/api/endpoints/: queries.py  upload.py
globantchallenge/api/endpoints/examples/output/: example_output_above_average_hired.json  example_output_hired_per_quarter.json
globantchallenge/api/endpoints/examples/sql/: above_average_hired.sql  hired_per_quarter.sql
globantchallenge/core/: database.py  init_db.py
globantchallenge/models/: models.py
globantchallenge/schemas/: department.py  employee.py  job.py
terraform/: main.tf  variables.tf
terraform/artifact_registry/: main.tf  variables.tf
terraform/cloud_build/: main.tf  variables.tf
tests/: conftest.py  test_main.py
tests/api/: test_upload.py
tests/core/: test_database.py
tests/models/: test_models.py
