[tool.poetry]
name = "globantchallenge"
version = "0.1.0"
description = "Pipeline to globant challenge"
authors = ["ludsonfelipe <felipe_ludson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
polars = "^1.12.0"
uvicorn = "^0.32.0"
python-multipart = "^0.0.16"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.4"
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.7.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
